# counter

./: counter.cabal  stack.yaml
app/: Main.hs
src/Counter/: Classes.hs  Console.hs  ConsoleImpl.hs  CounterLog.hs  CounterLogImpl.hs  Crement.hs  CrementImpl.hs  HasCounter.hs  Main.hs  Monad.hs  Prompt.hs  PromptImpl.hs  System.hs  Types.hs
src/Lib/: Classes.hs  ConsoleImpl.hs  CounterLogImpl.hs  CrementImpl.hs  Main.hs  PromptImpl.hs  System.hs  Types.hs
test/Test/Counter/: CounterLogSpec.hs  CrementSpec.hs  MainSpec.hs  PromptSpec.hs
test/Test/Lib/: CounterLogSpec.hs  CrementSpec.hs  MainSpec.hs  PromptSpec.hs
