name:
  counter
version:
  0.1.0.0
synopsis:
  Insert synopsis
description:
  Please see README.md
homepage:
  http://github.com/githubuser/counter#readme
license:
  BSD3
license-file:
  LICENSE
author:
  Author name here
maintainer:
  http://github.com/githubuser
copyright:
  2016 Author name here
category:
  Web
build-type:
  Simple
-- extra-source-files:
cabal-version:
  >=1.10

library
  hs-source-dirs:
    src
  exposed-modules:
    Lib.System
    Lib.Main
    Lib.Types
    Lib.Classes
    Lib.ConsoleImpl
    Lib.PromptImpl
    Lib.CrementImpl
    Lib.CounterLogImpl
  build-depends:
      base >= 4.7 && < 5
    , mtl
    , transformers
  default-language:
    Haskell2010
  default-extensions:
    OverloadedStrings
    TypeSynonymInstances
    FlexibleInstances
    FlexibleContexts
    GeneralizedNewtypeDeriving
    LambdaCase
    ScopedTypeVariables
    NamedFieldPuns
    MultiParamTypeClasses
    TypeFamilies
    TupleSections

executable counter-exe
  hs-source-dirs:
    app
  main-is:
    Main.hs
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , counter
  default-language:
    Haskell2010

test-suite counter-test
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Spec.hs
  build-depends:
      base
    , counter
    , hspec
    , mtl
    , test-fixture
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N
  default-language:
    Haskell2010
  default-extensions:
    TypeSynonymInstances
    FlexibleInstances
    FlexibleContexts
    GeneralizedNewtypeDeriving
    LambdaCase
    ScopedTypeVariables
    NamedFieldPuns
    MultiParamTypeClasses
    TypeFamilies
    TupleSections
    TemplateHaskell

source-repository head
  type:
    git
  location:
    https://github.com/githubuser/counter
